# python-hass-client

./: .gitignore  example.py  pyproject.toml
hass_client/: client.py  models.py
