[tool.poetry]
name = "python-hass-client"
version = "0.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hass_client" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
